# Speedster-sev

./: README.md
LightningNetwork/: ln_log.md  ln_seed.md  test_lighting_network.md
Teechain/src/: Makefile  sgx_t.mk  sgx_u.mk  teechain_private.pem
Teechain/src/service_provider/: service_provider.cpp  service_provider.h
Teechain/src/trusted/: backups.cpp  channel.h  network.h  teechain.edl
Teechain/src/trusted/libs/bitcoin/: coins.h  random.cpp
Teechain/src/untrusted/: backups.cpp  channel.cpp  channel.h  teechain.cpp
amd_sev/: CMakeLists.txt  README.md
amd_sev/lib/eEVM/: CMakeLists.txt
amd_sev/lib/eEVM/include/eEVM/: common.h  debug.h  rlp.h  storage.h  util.h
amd_sev/lib/eEVM/include/eEVM/simple/: simpleaccount.h  simplestorage.h
amd_sev/lib/eEVM/src/: encoding.cpp  processor.cpp
amd_sev/lib/eEVM/src/simple/: simpleaccount.cpp  simpleglobalstate.cpp
amd_sev/lib/eEVM/tests/: main.cpp
amd_sev/lib/libf2f/: CMakeLists.txt
amd_sev/lib/libf2f/include/libf2f/: connection.h  message.h  protocol.h  router.h
amd_sev/lib/libf2f/src/: connection.cpp  router.cpp
amd_sev/lntee/contract/: ERC20.sol  gomoku.sol  monopoly.sol  rpc.sol  solc.sh
amd_sev/lntee/contract/json/: ERC20.json  gomoku.json
amd_sev/lntee/include/common/: dispatcher.h  eth_aes.h  eth_ecdh.h  eth_ecdsa.h  eth_ecp.h  message.h  tee_handler.h  thread_pool.h  wallet.h
amd_sev/lntee/include/contract/: Helper.h  erc20_helper.h  gomoku_helper.h  rpc_helper.h
amd_sev/lntee/include/enclave/: TEE_contract.h  account.h  enclave.h  enclave_command.h  enclave_protocol.h
amd_sev/lntee/include/host/: Contract.h  Global.h  Helper.h  command.h  host.h  lntee_protocol.h  sev_handler.h  sgx_handler.h
amd_sev/lntee/include/socket/: config.h
amd_sev/lntee/src/common/: dispatcher.cpp  eth_aes.cpp  eth_ecdh.cpp  eth_ecdsa.cpp  eth_ecp.cpp  keys.cpp  wallet.cpp
amd_sev/lntee/src/contract/: Helper.cpp  erc20_helper.cpp  gomoku_helper.cpp  rpc_helper.cpp
amd_sev/lntee/src/enclave/: TEE_contract.cpp  account.cpp  enclave.cpp  enclave_command.cpp  main.cpp  seed.txt
amd_sev/lntee/src/host/: Global.cpp  Helper.cpp  command.cpp  host.cpp  main.cpp  sev_handler.cpp  sgx_handler.cpp  sync.sol
arm_trustzone/: CMakeLists.txt  network_setup.md  optee_os_modify_log.md  readme.md
arm_trustzone/emulation/optee_os/core/arch/arm/mm/: core_mmu_lpae.c
arm_trustzone/emulation/optee_os/ldelf/: ta_elf.c
arm_trustzone/lnteetz/: CMakeLists.txt
arm_trustzone/lnteetz/lib/: .clang-format
arm_trustzone/lnteetz/lib/boost-arm/lib/: libboost_atomic.so.1.64.0  libboost_chrono.so.1.64.0  libboost_container.so.1.64.0  libboost_date_time.so.1.64.0  libboost_filesystem.so.1.64.0  libboost_graph.so.1.64.0  libboost_iostreams.so.1.64.0  libboost_locale.so.1.64.0  libboost_log.so.1.64.0  libboost_log_setup.so.1.64.0  libboost_math_c99.so.1.64.0  libboost_math_c99f.so.1.64.0  libboost_math_c99l.so.1.64.0  libboost_math_tr1.so.1.64.0  libboost_math_tr1f.so.1.64.0  libboost_math_tr1l.so.1.64.0  libboost_prg_exec_monitor.so.1.64.0  libboost_program_options.so.1.64.0  libboost_random.so.1.64.0  libboost_regex.so.1.64.0  libboost_serialization.so.1.64.0  libboost_signals.so.1.64.0  libboost_system.so.1.64.0  libboost_thread.so.1.64.0  libboost_timer.so.1.64.0  libboost_type_erasure.so.1.64.0  libboost_unit_test_framework.so.1.64.0  libboost_wave.so.1.64.0  libboost_wserialization.so.1.64.0
arm_trustzone/lnteetz/lib/eEVM/: CMakeLists.txt
arm_trustzone/lnteetz/lib/eEVM/include/eEVM/: address.h  common.h  disassembler.h  encoding.h  processor.h  rlp.h  stack.h  trace.h  transaction.h  util.h
arm_trustzone/lnteetz/lib/eEVM/include/eEVM/simple/: simpleglobalstate.h
arm_trustzone/lnteetz/lib/eEVM/src/: disassembler.cpp  processor.cpp  util.cpp
arm_trustzone/lnteetz/lib/eEVM/src/simple/: simplestorage.cpp
arm_trustzone/lnteetz/lib/libf2f/: CMakeLists.txt  README.txt
arm_trustzone/lnteetz/lib/libf2f/include/libf2f/: connection.h  router.h
arm_trustzone/lnteetz/lib/libf2f/src/: protocol.cpp  router.cpp
arm_trustzone/lnteetz/lntee/: lntee.conf  lntee.edl
arm_trustzone/lnteetz/lntee/enclave/: CMakeLists.txt  main.cpp
arm_trustzone/lnteetz/lntee/enclave/include/: message.h  sgx_contract.h  shared.h  util.h  wallet.h
arm_trustzone/lnteetz/lntee/enclave/src/: dispatcher.cpp  eth_aes.cpp  eth_ecdh.cpp  eth_ecdsa.cpp  eth_ecp.cpp  keys.cpp  main.cpp  sgx_contract.cpp  util.cpp  wallet.cpp
arm_trustzone/lnteetz/lntee/enclave/test/: test_aes.h
arm_trustzone/lnteetz/lntee/host/: CMakeLists.txt
arm_trustzone/lnteetz/lntee/host/contract/: gomoku.json
arm_trustzone/lnteetz/lntee/host/include/: Global.h  Helper.h  command.h  erc20_helper.h  gomoku_helper.h  lntee_messages.h  lntee_protocol.h  payload.pb.h
arm_trustzone/lnteetz/lntee/host/src/: Global.cpp  command.cpp  enclaveadapter.cpp  erc20_helper.cpp  gomoku_helper.cpp  main.cpp  rpc_helper.cpp  test_direct_transaction.cpp
intel_sgx/: CMakeLists.txt
intel_sgx/lib/eEVM/include/eEVM/: account.h  bigint.h  block.h  debug.h  exception.h  globalstate.h  opcode.h  processor.h
intel_sgx/lib/eEVM/src/: common.cpp  processor.cpp  stack.cpp  transaction.cpp  util.cpp
intel_sgx/lib/eEVM/tests/: harness.cpp  rlp.cpp
intel_sgx/lib/libf2f/: CMakeLists.txt
intel_sgx/lib/libf2f/src/: router.cpp
intel_sgx/lntee/: Makefile  lntee.conf  lntee.edl
intel_sgx/lntee/enclave/: CMakeLists.txt
intel_sgx/lntee/enclave/include/: dispatcher.h  eth_aes.h  eth_ecdsa.h  eth_ecp.h
intel_sgx/lntee/enclave/src/: dispatcher.cpp  eth_aes.cpp  eth_ecdh.cpp  eth_ecdsa.cpp  keys.cpp  main.cpp  sgx_contract.cpp  wallet.cpp
intel_sgx/lntee/enclave/test/: Makefile  eth_ecdh.cpp  eth_ecdh.h  test_aes.cpp
intel_sgx/lntee/host/: CMakeLists.txt
intel_sgx/lntee/host/contract/: ERC20.json  ERC20.sol  rpc.json  rpc.sol  solc.sh  sync.json
intel_sgx/lntee/host/include/: Global.h  Helper.h  rpc_helper.h
intel_sgx/lntee/host/src/: Global.cpp  Helper.cpp  command.cpp  enclaveadapter.cpp  main.cpp  test_direct_transaction.cpp
